tests/vertical-slice/reject/enum_payload_literal_subpattern.hew
// Reject fixture: E_UNSUPPORTED_PAYLOAD_SUBPATTERN
// A literal in a constructor payload subpattern is not yet supported.
// The checker must reject this rather than silently lowering it as a wildcard,
// which would cause Shape::Line(1) to incorrectly match Shape::Line(2).
// Expected: type error UnsupportedPayloadSubpattern (kind_label: literal)
enum Shape {
    Line(i64);
    Square(i64);
}

fn main() -> i64 {
    let s = Shape::Line(2);
    match s {
        Shape::Line(1) => 999,
        Shape::Line(x) => x,
        Shape::Square(_) => 0,
    }
}
